<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recipe"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/recipieTitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/recipieTitle"
        android:textColor="@color/white"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/recipieItem_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/recipieItem"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipieTitle_text"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/recipieItem_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/recipieItem_hint"
        android:textColorHint="@color/black"
        android:fontFamily="casual"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipieItem_text"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/recipieIngredients_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/recipieIngredients"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:elevation="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipieItem_edit_text"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/recipieIngredients_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:hint="@string/recipieIngredients_hint"
        android:imeOptions="actionDone"
        android:textColorHint="@color/black"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipieIngredients_text"
        app:layout_constraintVertical_bias="0.018" />

    <ImageButton
        android:id="@+id/searchRecipie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:onClick="searchRecipie"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>